--- a/unpub_aws/pubspec.yaml
+++ b/unpub_aws/pubspec.yaml
@@ -1,23 +1,27 @@
 name: unpub_aws
 description: A collection of modules to use for deploying unpub into AWS infrastructure.
-version: 0.1.0
+version: 0.1.1
 homepage: https://github.com/bytedance/unpub
+publish_to: none
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
-  unpub: ^2.0.0
-  minio: ^3.0.0
-  http: ^0.13.3
+  unpub:
+    path: ../unpub
+  minio: ^3.5.0
+  http: ^1.2.1
 
 dev_dependencies:
-  lints: ^1.0.0
-  test: ^1.17.12
-  chunked_stream: ^1.4.1
-  mockito: ^5.0.16
-  build_runner: ^2.1.2
-  path: ^1.8.0
-  json_annotation: ^4.1.0
-# dependency_overrides:
+  lints: ^3.0.0
+  test: ^1.25.2
+  chunked_stream: ^1.4.2
+  mockito: ^5.4.4
+  build_runner: ^2.4.8
+  path: ^1.9.0
+  json_annotation: ^4.8.1
+
+dependency_overrides:
+  http: ^1.2.1
 #   unpub:
 #     path: ../unpub
