--- a/unpub_aws/pubspec.yaml
+++ b/unpub_aws/pubspec.yaml
@@ -7,8 +7,7 @@ environment:
   sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
-  unpub:
-    path: ../unpub
+  unpub: ^2.1.0
   minio: ^3.5.0
   http: ^1.2.1
 
