--- a/unpub_aws/pubspec.yaml
+++ b/unpub_aws/pubspec.yaml
@@ -7,7 +7,10 @@ environment:
   sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
-  unpub: ^2.1.0
+  unpub:
+    git:
+      url: https://github.com/luansilva-tokenlab/unpub
+      path: unpub
   minio: ^3.5.0
   http: ^1.2.1
 
@@ -22,5 +25,6 @@ dev_dependencies:
 
 dependency_overrides:
   http: ^1.2.1
+  intl: ^0.18.0
 #   unpub:
 #     path: ../unpub
